--- a/index.html
+++ b/index.html
@@ -3505,9 +3505,9 @@
 
         <img src="./assets/images/payment.png" alt="payment method" class="payment-img">
 
-        <p class="copyright">
+<!--         <p class="copyright">
           Copyright &copy; <a href="#">Anon</a> all rights reserved.
-        </p>
+        </p> -->
 
       </div>
 
